--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -4,7 +4,7 @@
     font-size: 1em;
     font-weight: bold;
     padding: 10px;
-    border: 1px solid black;
+    border: 1px solid transparent;
     border-radius: 3px;
     width: 80%;
     margin: 10px auto;
