--- a/src/pages/EventDetails/EventDetails.module.css
+++ b/src/pages/EventDetails/EventDetails.module.css
@@ -2,12 +2,6 @@
     display: grid;
 }
 
-.image {
-    margin: -10px;
-    height: 100%;
-    width: calc(100% + 20px) ;
-}
-
 .content{
     display: grid;
     gap: 10px;
@@ -35,4 +29,13 @@
     border-radius: 100%;
     height: 35px;
     width: auto;
+}
+
+.unsubscribeBtn {
+    background-color: red;
+}
+
+.disabledBtn {
+    color: black;
+    background-color: #eee;
 }
