--- a/src/components/EventCard/EventCard.module.css
+++ b/src/components/EventCard/EventCard.module.css
@@ -1,4 +1,4 @@
-.card {
+.grid {
     display: grid;
     grid-template-columns: 1fr 3fr;
     gap: 10px;
@@ -7,7 +7,7 @@
     text-decoration: none;
 }
 
-.image {
+.grid > div > img {
     height: 100%;
     width: 100%;
 }
@@ -18,12 +18,35 @@
     align-content: center;
 }
 
-.title {
+.content > h3 {
     margin: 0;
     font-size: 0.8em;
 }
 
-.city {
-    margin: 0;
+.content > div {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    place-content: center;
+    gap: 5px;
+}
+
+.content span {
     font-size: 0.8em;
+}
+
+.content button {
+    font-size: 0.6em;
+    font-weight: bold;
+    color: #fff;
+    border: 1px solid transparent;
+    border-radius: 3px;
+    padding: 5px;
+    background-color: #000;
+    align-self: center;
+    justify-self: center;
+}
+
+.content > div > div {
+    display: grid;
+    gap: 5px;
 }
