--- a/src/pages/Events/Events.module.css
+++ b/src/pages/Events/Events.module.css
@@ -2,3 +2,14 @@
     display: grid;
     gap: 10px;
 }
+
+.filters {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 5px;
+}
+
+.eventsList {
+    display: grid;
+    gap: 5px;
+}
