--- a/src/pages/Events/Events.module.css
+++ b/src/pages/Events/Events.module.css
@@ -1,19 +1,31 @@
 .grid {
     display: grid;
-    gap: 10px;
 }
 
-.filters {
+.grid > nav {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 5px;
+    grid-template-columns: 1fr auto 1fr;
+    justify-items: center;
+    gap: 20px;
+    padding: 20px 20px 30px;
+    background-color: #fff;
 }
 
-.eventsList {
-    display: grid;
-    gap: 5px;
+nav > a {
+    text-decoration: none;
+    font-size: 1em;
+    color: rgba(0, 0, 0, 0.75)
 }
 
-.eventsCounter {
-    font-size: 0.8em;
+.grid > nav > a:nth-of-type(1) {
+    justify-self: end;
+}
+
+.grid > nav > a:nth-of-type(2) {
+    justify-self: start;
+}
+
+.active {
+    color: #000;
+    font-weight: 600;
 }
